# MC-MapDrawingT

./: README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml
dete/: module_detection_judgment.py  module_detection_main.py
detection/: checker.py  subCheckers.py
gene/: module_generate_var.py  module_iteration.py  module_main_generate.py  module_var.py
generation/: __init__.py  constructor.py  finally.py  iteration.py  iterator.py  struct.py
